--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nightshade-jsdoc",
   "version": "1.0.0",
   "description": "A JSDoc template dedicated to a snappy, sleek, reactive, and smooth design based in React",
-  "main": "publish.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -26,7 +26,6 @@
   "bugs": {
     "url": "https://github.com/exoRift/nightshade-jsdoc/issues"
   },
-  "homepage": "https://github.com/exoRift/nightshade-jsdoc#readme",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -44,6 +43,7 @@
   },
   "dependencies": {
     "ejs": "^3.1.3",
+    "jsdoc": "^3.6.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
@@ -58,7 +58,6 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "jsdoc": "^3.6.4"
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
